# muelle

./: .gitignore  .qml.rcc  CMakeLists.txt  README.md  gulpUtils.js  gulpfile.js  gulputils.js  jest.config.js  main.cpp  package-lock.json  package.json  pre-run.sh  qml.qrc  qml.rcc  structure.md  tsconfig.json  tsserver.sh  utils.js
.github/workflows/: ccpp.yml
qml/: main.qml  qml.qrc
qml/Components/: AnimationControl.qml  AnimationControl2.qml  AnimationSlide.qml  BehaviorManager.qml  Box.qml  ConnectionGroup.qml  DockMenu.qml  FlexSpacing.qml  IconTask.qml  StateLayoutEdge.qml
qml/Components/Private/: BoxSideProps.qml
qml/Containers/: DockContainer.qml  IconTaskContainer.qml  PanelContainer.qml
qml/Extras/: BindingValue.qml  PaintItem.qml  QObject.qml  Spy.qml
qml/Settings/: Settings.qml  SettingsForm.ui.qml  SettingsWindow.qml
qml/libs/: constants.js  functional.js  lodash.custom.js  saga.js  signal.js  taskHelper.js
qml/libs/Flux/: FluxActionCreator.qml  FluxActions.qml  FluxMutations.qml  FluxState.qml  FluxStore.qml  Store.qml  actions.js  types.js
qml/libs/Flux/State/: Animation.qml  Geometry.qml  Panel.qml  Settings.qml
qml/libs/saga-tiny/: LICENSE  gulpfile.js  package-lock.json  package.json  tsconfig.json
qml/libs/saga-tiny/src/: effects.ts
qml/libs/saga-tiny/src/private/: genId.ts  symbols.ts
qml/polyfills/: promise.js
qml/polyfills/QuickPromise/: qmldir
qml/polyfills/Timer/: TimerComponent.qml  timer.js
shell/: DockArea.qml  Icon.qml  PanelLayout.qml  main.qml  qml.qrc
src/: behavior.cpp  behavior.hpp  behavior_p.hpp  dockconfig.hpp  dockconfig.hpp.in  docktype.cpp  docktype.hpp  docktypes.hpp  dockview.cpp  dockview.hpp  helpers.cpp  helpers.hpp  layout.cpp  layout.hpp  main.cpp  panelbehavior.cpp  panelbehavior.hpp  panelbehavior_p.hpp  positionhandler.cpp  positionhandler.hpp  pressuredetector.cpp  pressuredetector.hpp  project_structure
src/libs/: debouncesignal.cpp  enhancedqmlengine.cpp  enhancedqmlengine.hpp  function_view.cpp  functions.hpp  propertymap.cpp  propertymap.hpp  qmlsourcewatcher.cpp  qmlsourcewatcher.hpp
